# cpp-deuceclient

./: .gitignore  CMakeLists.txt  deuceclient-config.cmake.in
demo/: CMakeLists.txt  backup_file.cc  demo_helpers.h  dump_blocks.cc  restore_file.cc
files/: patch-config.py  patch-ini_config.ini
include/deuceclient/: __common.h  block_arrangement.h  bundle.h  client.h  clientfwd.h  deuceclient.h  exceptions.h  file.h  file_uploader.h  hashlib.h  rabin_boundary.h  rabin_fingerprint.h  string_view.h  vault.h
src/: _block.cc  _file.cc  _vault.cc  block_arrangement.cc  bundle.cc  client.cc  config.h.in  exceptions.cc  file.cc  hashlib.h  json_parsers.cc  json_parsers.h  rabin_fingerprint.cc  vault.cc
tests/: test_3rdparty.cc  test_blocks.cc  test_client.cc  test_file.cc  test_hashlib.cc  test_json.cc  test_msgpack.cc  test_rabin.cc  test_uploader.cc  test_vault.cc
